# image-implementation-benchmark

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bench  justfile  lefthook.yaml  lint  pyproject.toml  setup_data.sh
.github/workflows/: ci.yml
bench_lib/: __init__.py  build.py  data_setup.py  models.py  plotting.py  runner.py  summary.py  system_info.py
harness/cpp/: avif_decode_impl.hpp  avif_encode_impl.hpp  benchmark_harness.hpp  jpeg_decode_impl.hpp
harness/rust/: Cargo.toml
harness/rust/src/: lib.rs
implementations/cpp/dav1d/: CMakeLists.txt  decode.cpp  main.cpp
implementations/cpp/fpng/: CMakeLists.txt  main.cpp
implementations/cpp/libavif/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp
implementations/cpp/libgav1/: CMakeLists.txt  decode.cpp
implementations/cpp/libjpeg-turbo/: CMakeLists.txt  decode.cpp  encode.cpp  jpeg_wrapper.h  main.cpp
implementations/cpp/libjxl/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp
implementations/cpp/libpng/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp
implementations/cpp/libwebp/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp
implementations/cpp/mozjpeg/: CMakeLists.txt  decode.cpp  encode.cpp  jpeg_wrapper.h  main.cpp
implementations/cpp/null/: CMakeLists.txt  decode.cpp  encode.cpp
implementations/cpp/rav1d/: CMakeLists.txt  decode.cpp
implementations/cpp/spng/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp
implementations/cpp/svt-av1/: CMakeLists.txt  encode.cpp
implementations/rust/image-jpeg/: Cargo.toml
implementations/rust/image-jpeg/src/: encode.rs
implementations/rust/image-png/: Cargo.toml
implementations/rust/image-png/src/: decode.rs  encode.rs  main.rs
implementations/rust/image-webp/: Cargo.toml
implementations/rust/image-webp/src/: decode.rs  encode.rs  main.rs
implementations/rust/jpeg-decoder/: Cargo.toml
implementations/rust/jpeg-decoder/src/: decode.rs  main.rs
implementations/rust/jpeg-encoder/: Cargo.toml
implementations/rust/jpeg-encoder/src/: encode.rs
implementations/rust/jxl-oxide/: Cargo.toml
implementations/rust/jxl-oxide/src/: decode.rs  main.rs
implementations/rust/null/: Cargo.toml
implementations/rust/null/src/: decode.rs  encode.rs
implementations/rust/rav1d/: Cargo.toml
implementations/rust/rav1d/src/: decode.rs  main.rs
implementations/rust/rav1e/: Cargo.toml
implementations/rust/rav1e/src/: encode.rs  main.rs
implementations/rust/zune-jpeg/: Cargo.toml
implementations/rust/zune-jpeg/src/: decode.rs  main.rs
implementations/rust/zune-jpegxl/: Cargo.toml
implementations/rust/zune-jpegxl/src/: encode.rs  main.rs
implementations/rust/zune-png/: Cargo.toml
implementations/rust/zune-png/src/: decode.rs  encode.rs  main.rs
scripts/: select_div2k.py  test_plot_generation.py
