[workspace]
members = [
    "harness/rust",
    "implementations/rust/jpeg-decoder",
    "implementations/rust/zune-jpeg",
    "implementations/rust/image-png",
    "implementations/rust/zune-png",
    "implementations/rust/image-webp",
    "implementations/rust/rav1e",
    "implementations/rust/rav1d",
    "implementations/rust/jxl-oxide",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
