[project]
name = "image-implementation-benchmark"
version = "0.1.0"
description = "Image codec implementation benchmarks"
requires-python = ">=3.14"
dependencies = [
    "pillow",
    "imagehash",
    "numpy",
    "scipy>=1.10.1",
    "matplotlib>=3.7.5",
    "pydantic>=2.12.0",
    "tyro>=0.9.35",
    "colorama>=0.4.6",
]

[dependency-groups]
dev = ["ruff>=0.14.6"]
