[project]
name = "image-implementation-benchmark"
version = "0.1.0"
description = "Image codec implementation benchmarks"
requires-python = ">=3.14"
dependencies = [
    "pillow",
    "imagehash",
    "numpy",
    "scipy>=1.10.1",
    "matplotlib>=3.7.5",
    "pydantic>=2.12.0",
    "tyro>=1.0.3",
    "colorama>=0.4.6",
    "humanize>=4.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.6",
]

[tool.ruff]
extend-include = ["bench"]
