[package]
name = "benchmark-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
crc32fast = "1.3"
mimalloc = { version = "0.1", features = [
    "local_dynamic_tls",
], optional = true }
image = "0.24" # For loading/saving/verification
num_cpus = "1.0"

[features]
default = ["mimalloc"]
