[package]
name = "bench-image-png"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-image-png-decode"
path = "src/decode.rs"

[[bin]]
name = "bench-image-png-encode"
path = "src/encode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
image = "0.25.9"
anyhow = "1.0"
