[package]
name = "bench-image-png"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-image-png-decode"
path = "src/decode.rs"

[[bin]]
name = "bench-image-png-encode"
path = "src/encode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
image = { version = "0.25.9", default-features = false, features = ["png", "pnm"] }
anyhow = "1.0"
