[package]
name = "bench-image-webp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-image-webp-decode"
path = "src/decode.rs"

[[bin]]
name = "bench-image-webp-encode"
path = "src/encode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
image = "0.25.9"
image-webp = "0.2.4"
anyhow = "1.0"
