[package]
name = "bench-jpeg-decoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-jpeg-decoder-decode"
path = "src/decode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
jpeg-decoder = "0.3"
anyhow = "1.0"
image = { version = "0.25.9", default-features = false, features = ["pnm"] }
