[package]
name = "bench-jxl-oxide"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-jxl-oxide-decode"
path = "src/decode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
jxl-oxide = { version = "0.12", features = ["image"] }
anyhow = "1.0"
image = { version = "0.25.9", default-features = false, features = ["pnm"] }
