[package]
name = "bench-rav1d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-rav1d-decode"
path = "src/decode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
rav1d = { version = "1.1", default-features = false, features = [
    "bitdepth_8",
    "bitdepth_16",
] }
anyhow = "1.0"
image = "0.25.9"
