[package]
name = "bench-zune-jpegxl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-zune-jpegxl-encode"
path = "src/encode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
zune-jpegxl = "0.5.0-rc1"
zune-core = "0.5.0-rc1"
anyhow = "1.0"
image = { version = "0.25.9", default-features = false, features = ["pnm"] }
