[package]
name = "bench-zune-png"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-zune-png-decode"
path = "src/decode.rs"

[[bin]]
name = "bench-zune-png-encode"
path = "src/encode.rs"

[dependencies]
benchmark-harness = { path = "../../../harness/rust" }
zune-png = "0.5.0-rc1"
zune-core = "0.5.0-rc1"
anyhow = "1.0"
image = "0.25.9"
